# NetworkedPacman

./: .gitignore  IPC.json  LICENSE  README.md  main.py  relay.py  requirements.txt
godot/: .gitignore  IPC.json  IPCs.json  icon.svg.import  main.py  pacman_server.gdextension  project.godot  ui.tscn
godot/Assets/: Arcade - Pac-Man - General Sprites.png.import  Arcade - Pac-Man - Maze Parts.png.import  game-over.png.import  ghost01.png.import  ghost02.png.import  pac01.png.import  pac02.png.import  pac03.png.import  pac04.png.import  ref_image.png.import  reset.png.import  score-box.png.import
godot/Scenes/: gam1763.tmp  gam3D94.tmp  gam407.tmp  gam4AA2.tmp  gam745F.tmp  gamA51A.tmp  gamD747.tmp  game.tscn  ghost_area.tscn  pacman-tiles.tres  pacman_area.tscn  tiles.tscn  ui.gd  ui.tscn  walls.tscn
godot/Scripts/: game.cs  ghost_controls.gd  ipc.gd  net.cs  networking.gd  pacman_controls.gd  walls.gd
pacman_server/: Cargo.toml
pacman_server/src/: lib.rs
python/: graph.py  ipc.py  main.py
tests/: graph_tests.py  main_tests.py
